# Steamy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: bot_helper.py  exceptions.py  main.py  steam_api.py
src/models/: Achievement.py  AchievementDetails.py  AchievementPercent.py  Game.py  GameDetails.py  GamePlaytimes.py  PlayerAchievements.py  PlayerSummary.py  Players.py  Playtime.py  RarestAchievement.py  RarestAchievementStrings.py  Stats.py  TwoWeekStats.py
src/utils/: formatter.py  requests_retry_client.py
tests/: README.md  test_bot_helper.py  test_steam_api.py
