[tool.poetry]
name = "steam_api"
version = "0.1.0"
description = ""
authors = ["JDGiardino <JDGiardino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
steam = {extras = ["client"], version = "^1.2.0"}
steamclient = "^1.2"
gevent = "^21.8.0"
eventemitter = "^0.2.0"
google = "^3.0.0"
valve = "^0.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
